--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "child_process": "^1.0.2",
     "fs": "0.0.1-security",
+    "http-proxy": "^1.17.0",
     "path": "^0.12.7",
     "request": "^2.88.0",
     "url": "^0.11.0"
